[metadata]
name = webopencv
version = 0.0.1
author = Alvin Wan
author_email = hi@alvinwan.com
description = Stream live video feed from a webpage to a server-side python openCV script
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alvinwan/webopencv
project_urls =
    Bug Tracker = https://github.com/alvinwan/webopencv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
